--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "prettier": "^1.18.2",
     "supertest": "^4.0.2"
   },
-  "dependencies": {},
+  "dependencies": {
+    "metalsmith": "^2.3.0"
+  },
   "ava": {
     "files": [
       "**/*.test.js"
