--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
+    "nodemon": "^2.0.4",
     "np": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
