feat: group content by key then language

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "jstransformer-pug": "^0.3.0",
     "jstransformer-remark": "^7.0.0",
+    "lodash": "^4.17.15",
     "metalsmith": "^2.3.0",
     "metalsmith-in-place": "^4.4.1",
     "metalsmith-layouts": "^2.3.1",
