--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "date-fns": "^2.14.0",
     "jstransformer-function": "^1.0.1",
     "jstransformer-pug": "^0.3.0",
     "jstransformer-remark": "^7.0.0",
