--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "metalsmith-in-place": "^4.4.1",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-permalinks": "^2.2.0",
+    "remark-slug": "^6.0.0",
     "rss": "^1.2.2"
   },
   "ava": {
