--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "browser-sync": "^2.26.7",
     "chokidar-cli": "^2.1.0",
     "concurrently": "^5.2.0",
+    "cz-conventional-changelog": "^3.2.0",
     "docco": "^0.8.0",
     "eslint": "^6.8.0",
     "eslint-config-defaults": "^9.0.0",
