--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "hast-util-select": "^4.0.0",
     "jstransformer-function": "^1.0.1",
     "jstransformer-pug": "^0.3.0",
     "jstransformer-remark": "^7.0.0",
@@ -63,7 +64,13 @@
     "metalsmith-in-place": "^4.4.1",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-permalinks": "^2.2.0",
+    "patch-package": "^6.2.2",
+    "rehype": "^11.0.0",
+    "rehype-raw": "^4.0.2",
+    "rehype-remark": "^8.0.0",
+    "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.0",
+    "remark-rehype": "^7.0.0",
     "remark-slug": "^6.0.0",
     "rss": "^1.2.2"
   },
