feat: add helpers for handling links: well known urls and hreflang in MD

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=8.12.0"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "dev": "concurrently --handle-input --default-input-target dev:watch 'npm:dev:*'",
     "dev:watch": "nodemon",
     "dev:serve": "browser-sync start -s site --no-open",
@@ -56,6 +57,7 @@
   },
   "dependencies": {
     "hast-util-select": "^4.0.0",
+    "hast-util-to-string": "^1.0.4",
     "hastscript": "^6.0.0",
     "jstransformer-function": "^1.0.1",
     "jstransformer-pug": "^0.3.0",
@@ -71,6 +73,7 @@
     "rehype-remark": "^8.0.0",
     "rehype-stringify": "^8.0.0",
     "remark-autolink-headings": "^6.0.0",
+    "remark-hreflang": "https://github.com/tzi/remark-hreflang.git",
     "remark-rehype": "^7.0.0",
     "remark-slug": "^6.0.0",
     "rss": "^1.2.2"
