feat: add syntax highlighting to code blocks

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "hast-util-select": "^4.0.0",
     "hast-util-to-string": "^1.0.4",
     "hastscript": "^6.0.0",
+    "highlight.js": "^10.3.2",
     "jstransformer-function": "^1.0.1",
     "jstransformer-pug": "^0.3.0",
     "jstransformer-remark": "^7.0.0",
@@ -67,8 +68,10 @@
     "metalsmith-in-place": "^4.4.1",
     "metalsmith-layouts": "^2.3.1",
     "metalsmith-permalinks": "^2.2.0",
+    "nord-highlightjs": "^0.1.0",
     "patch-package": "^6.2.2",
     "rehype": "^11.0.0",
+    "rehype-highlight": "^4.0.0",
     "rehype-hreflang": "^1.0.0",
     "rehype-raw": "^4.0.2",
     "rehype-remark": "^8.0.0",
