--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -25,7 +25,8 @@
     "@nuxt/content": "^1.9.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "nuxt-i18n": "^6.15.4"
+    "nuxt-i18n": "^6.15.4",
+    "unist-util-remove": "^2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
