--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Node template
 # Logs
-logs
+/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -33,7 +35,7 @@ bower_components
 build/Release
 
 # Dependency directories
-/node_modules/
+node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -57,11 +59,32 @@ typings/
 # dotenv environment variables file
 .env
 
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+
 # next.js build output
 .next
 
-# Documentation output
-/docs
+# nuxt.js build output
+.nuxt
 
-# Website output
-/site
+# Nuxt generate
+dist
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# IDE / Editor
+.idea
+
+# Service worker
+sw.*
+
+# macOS
+.DS_Store
+
+# Vim swap files
+*.swp
