--- a/package.json
+++ b/package.json
@@ -1,92 +1,45 @@
 {
   "name": "romaricpascal.is",
-  "version": "0.0.1",
-  "description": "Sources and content of romaricpascal.is website",
-  "main": "src/index.js",
+  "version": "1.0.0",
   "private": true,
-  "engines": {
-    "node": ">=8.12.0"
-  },
   "scripts": {
-    "postinstall": "patch-package",
-    "dev": "concurrently --handle-input --default-input-target dev:watch 'npm:dev:*'",
-    "dev:watch": "nodemon",
-    "dev:serve": "browser-sync start -s site --no-open",
-    "lint": "eslint '**/*.js'",
-    "check-links": "wget --spider --recursive --no-verbose localhost:3000 && rm -r localhost:3000",
-    "test": "nyc --reporter=text ava",
-    "docs": "(cd src && npx docco -o ../docs index.js)",
-    "docs:watch": "chokidar src/index.js -c 'npm run docs'",
-    "docs:serve": "browser-sync start -s docs -w 'docs/**/*'",
-    "docs:write": "run-p docs:watch docs:serve",
-    "release": "np"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rhumaric/romaricpascal.is.git"
-  },
-  "author": "Romaric Pascal <hello@romaricpascal.is>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/rhumaric/romaricpascal.is/issues"
-  },
-  "homepage": "https://github.com/rhumaric/romaricpascal.is#readme",
-  "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "ava": "^3.5.0",
-    "browser-sync": "^2.26.7",
-    "chokidar-cli": "^2.1.0",
-    "concurrently": "^5.2.0",
-    "cz-conventional-changelog": "^3.2.0",
-    "docco": "^0.8.0",
-    "eslint": "^6.8.0",
-    "eslint-config-defaults": "^9.0.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "express": "^4.17.1",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
-    "nodemon": "^2.0.4",
-    "np": "^6.2.0",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
-    "prettier": "^1.18.2",
-    "supertest": "^4.0.2"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint": "npm run lint:js && npm run lint:style"
   },
   "dependencies": {
-    "dedent": "^0.7.0",
-    "hast-util-select": "^4.0.0",
-    "hast-util-to-string": "^1.0.4",
-    "hastscript": "^6.0.0",
-    "highlight.js": "^10.3.2",
-    "jstransformer-function": "^1.0.1",
-    "jstransformer-pug": "^0.3.0",
-    "jstransformer-remark": "^7.0.0",
-    "lodash": "^4.17.15",
-    "metalsmith": "^2.3.0",
-    "metalsmith-in-place": "^4.4.1",
-    "metalsmith-layouts": "^2.3.1",
-    "metalsmith-permalinks": "^2.2.0",
-    "nord-highlightjs": "^0.1.0",
-    "patch-package": "^6.2.2",
+    "@nuxt/content": "^1.9.0",
+    "core-js": "^3.6.5",
+    "nuxt": "^2.14.6",
+    "nuxt-i18n": "^6.15.4",
+    "unist-util-remove": "^2.0.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@nuxtjs/eslint-config": "^3.1.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "@nuxtjs/stylelint-module": "^4.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "hast-util-select": "^4.0.1",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
     "rehype": "^11.0.0",
     "rehype-highlight": "^4.0.0",
     "rehype-hreflang": "^1.0.0",
-    "rehype-raw": "^4.0.2",
-    "rehype-remark": "^8.0.0",
-    "rehype-stringify": "^8.0.0",
-    "remark-autolink-headings": "^6.0.0",
-    "remark-hreflang": "https://github.com/tzi/remark-hreflang.git",
-    "remark-rehype": "^7.0.0",
-    "remark-slug": "^6.0.0",
-    "rss": "^1.2.2",
-    "unist-util-visit": "^2.0.3"
-  },
-  "ava": {
-    "files": [
-      "**/*.test.js"
-    ]
+    "remark-hreflang": "^1.0.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
