--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
+    "lint:style": "stylelint **/*.{vue,scss,css} --ignore-path .gitignore",
     "lint": "npm run lint:js && npm run lint:style"
   },
   "dependencies": {
@@ -25,11 +25,13 @@
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "babel-eslint": "^10.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "fibers": "^5.0.0",
     "hast-util-select": "^4.0.1",
     "husky": "^4.3.0",
     "lint-staged": "^10.4.0",
@@ -38,8 +40,13 @@
     "rehype-highlight": "^4.0.0",
     "rehype-hreflang": "^1.0.0",
     "remark-hreflang": "^1.0.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0"
+    "stylelint-config-recommended-scss": "^4.2.0",
+    "stylelint-config-scss": "^1.0.0-security",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0"
   }
 }
